edu1-gitops-dev/frontend-vue/kustomize/frontend-vue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-vue
  namespace: edu1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-vue
  template:
    metadata:
      labels:
        app: frontend-vue
    spec:
      containers:
      - name: frontend-vue
        image: ictcoe.azurecr.io/frontend-vue:master-20240712012743
        tag: 
        ports:
        - containerPort: 80
