edu1-gitops-dev/frontend-vue/kustomize/frontend-vue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-vue
  namespace: edu1
spec:
  selector:
    app: frontend-vue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
