edu1-gitops-dev/frontend-vue/kustomize/frontend-vue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-vue
  namespace: edu1
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: frontend-vue.52.231.144.33.nip.io
      http:
        paths:
        - backend:
            service:
              name: frontend-vue
              port:
                number: 80
          path: /
          pathType: Prefix
